WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 208363
Fix WebCore export macros for declspec
https://bugs.webkit.org/show_bug.cgi?id=208363
Summary
Fix WebCore export macros for declspec
Don Olmstead
Reported
2020-02-27 17:39:16 PST
Currently WEBCORE_EXPORT on Windows is set using header files rather than being configured based on the library type. The PlatformExportMacros file should match the other export files and not have Windows specific logic.
Attachments
Patch
(7.84 KB, patch)
2020-02-27 17:43 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(20.37 KB, patch)
2020-02-27 19:24 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(20.37 KB, patch)
2020-02-27 19:33 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-02-27 17:43:59 PST
Created
attachment 391948
[details]
Patch
Don Olmstead
Comment 2
2020-02-27 17:44:36 PST
Comment on
attachment 391948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391948&action=review
> Source/WebCore/WebCorePrefix.h:44 > +#if !PLATFORM(WIN)
Should be !OS(WINDOWS)
Konstantin Tokarev
Comment 3
2020-02-27 17:51:30 PST
Comment on
attachment 391948
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391948&action=review
> Tools/TestWebKitAPI/win/TestWebKitAPIPrefix.h:-32 > -#define WEBCORE_TESTSUPPORT_EXPORT
After this change, this file contains only copyright header. Shouldn't it be removed altogether?
> Tools/WebKitTestRunner/InjectedBundle/win/TestRunnerInjectedBundlePrefix.h:-29 > -#define WEBCORE_TESTSUPPORT_EXPORT
Ditto.
Don Olmstead
Comment 4
2020-02-27 19:24:34 PST
Created
attachment 391957
[details]
Patch
Konstantin Tokarev
Comment 5
2020-02-27 19:31:51 PST
Comment on
attachment 391957
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391957&action=review
> Source/WebCore/WebCorePrefix.h:46 > +#endif // !OS(WIN)
Typo
Don Olmstead
Comment 6
2020-02-27 19:33:45 PST
Created
attachment 391958
[details]
Patch
WebKit Commit Bot
Comment 7
2020-02-27 22:25:11 PST
The commit-queue encountered the following flaky tests while processing
attachment 391958
[details]
: editing/spelling/spellcheck-paste-continuous-disabled.html
bug 208016
(authors:
g.czajkowski@samsung.com
and
mark.lam@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8
2020-02-27 22:25:56 PST
Comment on
attachment 391958
[details]
Patch Clearing flags on attachment: 391958 Committed
r257619
: <
https://trac.webkit.org/changeset/257619
>
WebKit Commit Bot
Comment 9
2020-02-27 22:25:58 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2020-02-27 22:26:15 PST
<
rdar://problem/59877365
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug