Fix WebCore export macros for declspec https://bugs.webkit.org/show_bug.cgi?id=208363

Reviewed by Konstantin Tokarev.

Source/WebCore:

Modified the PlatformExportMacros to match the other export macros. Originally
Windows ports were treated differently and they had to set their own export macros.
This isn't ideal because how WebCore is built is really dependent on the CMake
definition of the library type.

* CMakeLists.txt:
* WebCorePrefix.h:
* platform/PlatformExportMacros.h:
* testing/js/WebCoreTestSupportPrefix.h:

Source/WebKit:

Add compilation definitions for static linking of PAL and WebCore in WebKit.

* PlatformFTW.cmake:
* PlatformWin.cmake:
* config.h:

Source/WebKitLegacy:

Add compilation definitions for static linking of PAL and WebCore in WebKitLegacy.

* PlatformFTW.cmake:
* PlatformWin.cmake:

Source/WebKitLegacy/win:

Remove setting of WEBCORE_EXPORT from the header files.

* WebKitPrefix.h:

Tools:

Remove setting of WEBCORE_EXPORT and WEBCORE_TESTSUPPORT_EXPORT from the header
files. Removed precompiled headers that were empty.

* DumpRenderTree/DumpRenderTreePrefix.h:
* DumpRenderTree/win/DefaultPolicyDelegate.cpp: Added a missing config.h.
* MiniBrowser/win/stdafx.h:
* TestWebKitAPI/win/TestWebKitAPIPrefix.cpp: Removed.
* TestWebKitAPI/win/TestWebKitAPIPrefix.h: Removed.
* WebKitTestRunner/InjectedBundle/win/TestRunnerInjectedBundlePrefix.cpp: Removed.
* WebKitTestRunner/InjectedBundle/win/TestRunnerInjectedBundlePrefix.h: Removed.
* WebKitTestRunner/PlatformFTW.cmake:
* WebKitTestRunner/PlatformWin.cmake:
* WebKitTestRunner/WebKitTestRunnerPrefix.h:


Canonical link: https://commits.webkit.org/221288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257619 268f45cc-cd09-0410-ab3c-d52691b4dbfc