Source/WebKitLegacy/win/WebKitPrefix.h
@@ -67,8 +67,3 @@ typedef float CGFloat;
 #define CGFLOAT_DEFINED 1
 #endif
 #endif /* USE(CG) */
-
-// WebKit.dll is expected to export the symbols in WebCore that have been marked
-// as WEBCORE_EXPORT
-#undef WEBCORE_EXPORT
-#define WEBCORE_EXPORT WTF_EXPORT_DECLARATION
